# csp-billing-adapter

./: .gitignore  CHANGES.md  CONTRIBUTING.md  MANIFEST.in  README.md  adapter.py  csp-billing-adapter.spec  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-workflow.yml  pypi-publish.yml
charts/: chart.yaml  container_deploy.yaml  notif.yaml  rbac.yaml  sa.yaml  setting.yaml  ur.yaml  usage.yml
csp_billing_adapter/: __init__.py  adapter.py  archive.py  archive_hookspecs.py  bill_utils.py  config.py  csp_cache.py  csp_config.py  csp_hookspecs.py  csp_usage.py  exceptions.py  hookimpls.py  hookspecs.py  host.py  local_csp.py  memory_archive.py  memory_cache.py  memory_csp_config.py  product_api.py  storage_hookspecs.py  utils.py
examples/: README.md  csp-billing-adapter-example-Rancher_NV.yaml  csp-billing-adapter-example-SUMA.yaml
systemd/: csp-billing-adapter.service
tests/: test_adapter.py
tests/data/: config_bad.yaml  config_broken_dimensions.yaml  config_dimensions_gap.yaml  config_dimensions_no_tail.yaml  config_good_average.yaml  config_good_average_no_archive.yaml  config_good_fixed.yaml  config_good_maximum.yaml  config_invalid_consumption.yaml  config_missing_version.yaml  config_no_dimensions.yaml  config_no_usage_metrics.yaml  config_testing_mixed.yaml
tests/unit/: conftest.py  test_adapter.py  test_archive.py  test_bill_utils.py  test_config.py  test_csp_cache.py  test_csp_config.py  test_hookimpls.py  test_local_csp.py  test_memory_cache.py  test_memory_csp_config.py  test_product_api.py  test_utils.py
