[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:csp_billing_adapter/__init__.py]

[bumpversion:file:csp-billing-adapter.spec]

[tool:pytest]
testpaths = tests
norecursedirs = data

[coverage:report]
fail_under = 85

[metadata]
license_file = LICENSE

[flake8]
exclude = data


