[bumpversion]
current_version = 0.10.0
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:csp_billing_adapter/__init__.py]

[bumpversion:file:csp-billing-adapter.spec]

[bumpversion:file:tests/unit/test_adapter.py]

[tool:pytest]
testpaths = tests
norecursedirs = data

[coverage:report]
fail_under = 90
show_missing = True

[metadata]
license_file = LICENSE

[flake8]
exclude = data
